[gd_scene load_steps=17 format=3 uid="uid://bexdn3anmetvk"]

[ext_resource type="Script" path="res://menus/pause_menu.gd" id="1_pclm5"]
[ext_resource type="Theme" uid="uid://cr6vy3buybag8" path="res://assets/menu_ui_theme.tres" id="2_8wtlo"]
[ext_resource type="Texture2D" uid="uid://uyfla40tcf1f" path="res://assets/ui/buttonsquarepress-2.png" id="3_tbgpv"]
[ext_resource type="Texture2D" uid="uid://bt5rot5nvfg3e" path="res://assets/ui/buttonsquare-1.png" id="4_8xiou"]
[ext_resource type="AudioStream" uid="uid://hffaufob8o5g" path="res://assets/audio/ui/ui_click/ui_click_001.wav" id="5_oqhgb"]
[ext_resource type="AudioStream" uid="uid://rg1b1o7e2n44" path="res://assets/audio/ui/ui_click/ui_click_002.wav" id="6_k3gkn"]
[ext_resource type="AudioStream" uid="uid://b82oqcro4rdem" path="res://assets/audio/ui/ui_click/ui_click_003.wav" id="7_8kilo"]
[ext_resource type="AudioStream" uid="uid://dcb0kyqcvpblx" path="res://assets/audio/ui/ui_click/ui_click_004.wav" id="8_gkjhx"]
[ext_resource type="AudioStream" uid="uid://dx6biemijx04b" path="res://assets/audio/ui/ui_click/ui_click_005.wav" id="9_wcwdl"]
[ext_resource type="AudioStream" uid="uid://bs23va5bt80mp" path="res://assets/audio/ui/ui_click/ui_click_006.wav" id="10_yoaeh"]
[ext_resource type="AudioStream" uid="uid://cm4t2khxai81o" path="res://assets/audio/ui/ui_click/ui_click_007.wav" id="11_jfhik"]
[ext_resource type="AudioStream" uid="uid://dkbk385ynsk6x" path="res://assets/audio/ui/ui_click/ui_click_008.wav" id="12_pravi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_354y3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cta51"]
texture = ExtResource("4_8xiou")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 30.0
texture_margin_bottom = 25.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i1u3u"]
texture = ExtResource("3_tbgpv")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 30.0
texture_margin_bottom = 25.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_iee6d"]
streams_count = 8
stream_0/stream = ExtResource("5_oqhgb")
stream_1/stream = ExtResource("6_k3gkn")
stream_2/stream = ExtResource("7_8kilo")
stream_3/stream = ExtResource("8_gkjhx")
stream_4/stream = ExtResource("9_wcwdl")
stream_5/stream = ExtResource("10_yoaeh")
stream_6/stream = ExtResource("11_jfhik")
stream_7/stream = ExtResource("12_pravi")

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pclm5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.258824)

[node name="BittonsVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -332.0
offset_top = -123.0
offset_right = 332.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="BittonsVBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8wtlo")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_354y3")
theme_override_styles/hover = SubResource("StyleBoxTexture_cta51")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i1u3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_cta51")
text = "Continue"

[node name="RestartLevelButton" type="Button" parent="BittonsVBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8wtlo")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_354y3")
theme_override_styles/hover = SubResource("StyleBoxTexture_cta51")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i1u3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_cta51")
text = "Restart"

[node name="MainMenuButton" type="Button" parent="BittonsVBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8wtlo")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_354y3")
theme_override_styles/hover = SubResource("StyleBoxTexture_cta51")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i1u3u")
theme_override_styles/normal = SubResource("StyleBoxTexture_cta51")
text = "Give up"

[node name="PausedMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 100

[node name="PausedLabel" type="Label" parent="PausedMarginContainer"]
layout_mode = 2
theme = ExtResource("2_8wtlo")
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UiClick" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = SubResource("AudioStreamRandomizer_iee6d")

[connection signal="pressed" from="BittonsVBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="BittonsVBoxContainer/RestartLevelButton" to="." method="_on_restart_level_button_pressed"]
[connection signal="pressed" from="BittonsVBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
